# photo_manager

./: .env  .gitignore  LICENSE  README.md  middleware.tsx  next.config.mjs  package-lock.json  package.json
src/: env_template.txt  main.py  pyproject.toml
src/auth/app/ports/: __init__.py  user_repository.py
src/auth/app/use_cases/: auth_service.py  user_service.py
src/auth/domain/entities/: auth.py  user.py  value_objects.py
src/auth/domain/exceptions/: __init__.py  exceptions.py
src/auth/infra/database/postgres/: auth.prisma  auth_postgres_repository.py  postgres_repository.py  prisma_connection.py  schema.prisma  user_postgres_repository.py
src/auth/infra/factories/: user_factory.py
src/auth/infra/web/: auth_router.py  dependencies.py  schemas.py  user_router.py
src/auth/infra/web/controllers/: auth_router.py  user_router.py
src/auth/tests/: test_auth.py  test_user.py
src/auth/utils/: managers.py
src/config/: config.py
src/images/: alembic.ini  pytest.ini
src/images/alembic/: env.py
src/images/alembic/versions/: 144b1d9498db_db_models.py  89ae6eeb7d00_.py  abfcc3b8db18_.py  b605eb4ae858_remove_column.py
src/images/app/use_cases/: image_service.py
src/images/domain/: entities.py  value_objects.py
src/images/infra/database/mysql/: models.py  mysql_connection.py  mysql_repository.py
src/images/infra/database/postgres/: images.prisma  postgres_connection.py  (+3 more)
src/images/infra/web/: dependencies.py  image_router.py  schemas.py
src/images/tests/: test_image.py
src/images/utils/: managers.py
src/scripts/: calendar.sql  seed.sql
(+73 files in other folders)
